2010-04-20  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (condition-timed-wait): New helper. Use
	WITH-DEADLINE rather than WITH-TIMEOUT because the latter conses a
	new timer, and this function is called _a lot_.
	(receive-if): Use it.

2010-04-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-update-threads-buffer): Save point position
	on updates.

2010-04-20  Stas Boukarev  <stassats@gmail.com>

	* README: advertise additional contribs, especially slime-fancy.

2010-04-19  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (symbol-classification-string): New function to
	replace (symbol-classification->string (classify-symbol
	symbol)). It's faster and conses much less, while it is called
	many times by fuzzy completion and fancy inspector.
	(symbol-classification->string): Removed.
	(list-threads): Exclude the current thread only if its name is
	"worker".

2010-04-18  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-threads-update-interval): Add :group and :type
	parameters to this customization.
	Thanks to Mark Harig.

2010-04-17  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-threads-update-interval): New customization
	variable, if set to a number the threads buffer will
	updated with this interval.
	(slime-with-popup-buffer): Rename modes option to mode,
	for a major mode. Enabling minor modes from within the body
	doesn't cause troubles. End that way it is compatible with XEmacs
	since it doesn't need to use minor-mode-list to distinguish
	between minor and major modes.

	* swank.lisp (list-threads): Delete the current thread from the listing.

2010-04-15  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (sldb-mode): Include some more commands in its help.
	(sldb-goto-last-frame): Do not center to the middle but to the
	bottom of the window.

2010-04-14  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (compile-file-for-emacs): Actually commit the change
	described in 2010-04-12.
